Fix social icons aligning to start and changed nav to div in Hero section

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -98,7 +98,7 @@
 
   nav {
     display: flex;
-    align-self: flex-start;
+    //align-self: flex-start
   }
 
   .nav__inner {
